<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <TextView
            android:id="@+id/title_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="?actionBarSize"
            android:padding="@dimen/appbar_padding"
            android:text="关于"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_about_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher_round"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="@string/app_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="版本：1.0.0_1"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textIsSelectable="true"
                android:text="作者：sendtion（微信号）"
                android:textSize="16sp"
                android:textStyle="italic" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="10dp"
                android:background="@color/gray_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8dp"
                android:padding="20dp"
                android:text="此应用为2020新型冠状病毒查询提供方便。\n欢迎大家提供素材和建议。\n大家一起为武汉加油！\n为祖国加油！"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_margin="10dp"
                android:background="@color/gray_300" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="20dp"
                android:text="下载地址："
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:text="@string/pu_gong_yin"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:text="@string/fir_im"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:visibility="gone"
                    android:text="@string/lan_zou_yun"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_app_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/app_download_url"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>